# VioletClient

./: .gitignore  CMakeLists.txt  MakeInstaller.nsi  README.md  README_EN.md  clickabletextbrowser.cpp  clickabletextbrowser.h  common.cpp  common.h  logincenter.cpp  logincenter.h  logincenter.ui  main.cpp  messagedispatcher.cpp  messagedispatcher.h  protocol.cpp  protocol.h  pvp.cpp  pvp.h  pvp.ui  registerviolet.cpp  registerviolet.h  registerviolet.ui  resources.qrc  sqlitehelper.cpp  sqlitehelper.h  unlogincenter.cpp  unlogincenter.h  unlogincenter.ui  usermainwindow.cpp  usermainwindow.h  usermainwindow.ui  violetclient.cpp  violetclient.h  violetclient.ui
.github/: AndroidBuild.yml
.github/workflows/: AndroidBuild.yml  cmake-multi-platform.yml  windows.yml
android/: AndroidManifest.xml
resources/certs/: client.crt  client.csr  client.key
